--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ profile_default/
 ipython_config.py
 
 # Remove previous ipynb_checkpoints
-git rm -r .ipynb_checkpoints/
+# git rm -r .ipynb_checkpoints/
 
 .DS_Store
